--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,11 @@
 
 <!-- Carousel -->
 <section>
+  <center>
+    <h1 data-aos="fade-right" class="sectionHeader">Cryptos We Accept</h1>
+    <p class="sectionPara" data-aos="fade-left">Here's a list if crypto coin we Accept, trade, transact and invest!!!
+    </p>
+  </center>
     <div data-aos="fade-up" class="carouselContainer">
         <div class="eachCarousel eachCarouselBorder">
             <img src="{% static 'img/bitcoin-icon.png' %}" alt="">
