--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,12 +12,13 @@ Contact
     <section class="gridSection contactSection" data-aos="fade-up">
         <div class="contactformContainer">
             <h1 class="sectionHeader">Get in touch</h1>
-            <form action="#" class="contactForm">
+            <form action="." class="contactForm" method='post'>
+                {% csrf_token %}
                 <div>
-                    <input type="text" name="" id="" placeholder="full name" class="contactInput">
-                    <input type="text" name="" id="" placeholder="Email" class="contactInput">
+                    <input type="text" name="fullName" id="fullName" placeholder="full name" class="contactInput">
+                    <input type="email" name="email" id="email" placeholder="Email" class="contactInput">
                 </div>                               
-                <textarea name="" id="" cols="30" rows="5" placeholder="Message" class="contactInput"></textarea>
+                <textarea name="Message" id="Message" cols="30" rows="5" placeholder="Message" class="contactInput"></textarea>
                 <button type="submit" class="btn primaryBtn contactBtn">Submit</button>
             </form>
         </div>
