--- a/templates/index.html
+++ b/templates/index.html
@@ -34,91 +34,108 @@
     <p class="sectionPara" data-aos="fade-left">Here's a list if crypto coin we Accept, trade, transact and invest!!!
     </p>
   </center>
-    <div data-aos="fade-up" class="carouselContainer">
-        <div class="eachCarousel eachCarouselBorder">
-            <img src="{% static 'img/bitcoin-icon.png' %}" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Bitcoin</h1>
-                <p class="carouselPara">Bitcoin is an innovative payment network</p>
-                <div class="carouselPrice">
-                    <h3>$34,000</h3>
-                    <span class="rect"></span>
-                    <h3 class="carouselDiscount">15%</h3>
-                </div>
-                <button class="btn carouselBtn">Buy & Trade</button>
-            </article>
-        </div>
+  
+{% comment %} <div class="wrapper">
+  <div class="slider">
+    
+  </div>
+</div> {% endcomment %}
 
-        <div class="eachCarousel">
-            <img src="{% static 'img/ethereum-icon.png' %}" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Ethereum</h1>
-                <p class="carouselPara">Ethereum is open-source blockchain currency</p>
-                <div class="carouselPrice">
-                    <h3>$25,600</h3>
-                    <span class="rect"></span>
-                    <h3 class="carouselDiscount">9%</h3>
-                </div>
-                <button class="btn carouselBtn">Buy & Trade</button>
-            </article>
-        </div>
 
-        <div class="eachCarousel">
-            <img src="{% static 'img/tether-icon.png' %}" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Tether</h1>
-                <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
-                <div class="carouselPrice">
-                    <h3>$7,000</h3>
-                    <span class="rect"></span>
-                    <h3 class="carouselDiscount">4%</h3>
-                </div>
-                <button class="btn carouselBtn">Buy & Trade</button>
-            </article>
-        </div>
 
-        <div class="eachCarousel">
-            <img src="{% static 'img/bitcoin-icon.png' %}" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Bitcoin</h1>
-                <p class="carouselPara">Bitcoin is an innovative payment network</p>
-                <div class="carouselPrice">
-                    <h3>$34,000</h3>
-                    <span class="rect"></span>
-                    <h3 class="carouselDiscount">15%</h3>
-                </div>
-                <button class="btn carouselBtn">Buy & Trade</button>
-            </article>
-        </div>
 
-        <div class="eachCarousel">
-            <img src="{% static 'img/ethereum-icon.png' %}" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Ethereum</h1>
-                <p class="carouselPara">Ethereum is open-source blockchain currency</p>
-                <div class="carouselPrice">
-                    <h3>$25,600</h3>
-                    <span class="rect"></span>
-                    <h3 class="carouselDiscount">9%</h3>
-                </div>
-                <button class="btn carouselBtn">Buy & Trade</button>
-            </article>
-        </div>
 
-        <div class="eachCarousel">
-            <img src="{% static 'img/tether-icon.png' %}" alt="">
-            <article class="carouselDesc">
-                <h1 class="carouselTitle">Tether</h1>
-                <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
-                <div class="carouselPrice">
-                    <h3>$7,000</h3>
-                    <span class="rect"></span>
-                    <h3 class="carouselDiscount">4%</h3>
-                </div>
-                <button class="btn carouselBtn">Buy & Trade</button>
-            </article>
-        </div>
-    </div>
+
+{% comment %} <div class="container owl-carousel owl-theme"> {% endcomment %}
+
+<div data-aos="fade-up" class="carouselContainer">
+  
+  <div class="eachCarousel eachCarouselBorder">
+      <img src="{% static 'img/bitcoin-icon.png' %}" alt="">
+      <article class="carouselDesc">
+          <h1 class="carouselTitle">Bitcoin</h1>
+          <p class="carouselPara">Bitcoin is an innovative payment network</p>
+          <div class="carouselPrice">
+              <h3>$34,000</h3>
+              <span class="rect"></span>
+              <h3 class="carouselDiscount">15%</h3>
+          </div>
+          <button class="btn carouselBtn">Buy & Trade</button>
+      </article>
+  </div>
+
+  <div class="eachCarousel">
+      <img src="{% static 'img/ethereum-icon.png' %}" alt="">
+      <article class="carouselDesc">
+          <h1 class="carouselTitle">Ethereum</h1>
+          <p class="carouselPara">Ethereum is open-source blockchain currency</p>
+          <div class="carouselPrice">
+              <h3>$25,600</h3>
+              <span class="rect"></span>
+              <h3 class="carouselDiscount">9%</h3>
+          </div>
+          <button class="btn carouselBtn">Buy & Trade</button>
+      </article>
+  </div>
+
+  <div class="eachCarousel">
+      <img src="{% static 'img/tether-icon.png' %}" alt="">
+      <article class="carouselDesc">
+          <h1 class="carouselTitle">Tether</h1>
+          <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
+          <div class="carouselPrice">
+              <h3>$7,000</h3>
+              <span class="rect"></span>
+              <h3 class="carouselDiscount">4%</h3>
+          </div>
+          <button class="btn carouselBtn">Buy & Trade</button>
+      </article>
+  </div>
+
+  <div class="eachCarousel">
+      <img src="{% static 'img/bitcoin-icon.png' %}" alt="">
+      <article class="carouselDesc">
+          <h1 class="carouselTitle">Bitcoin</h1>
+          <p class="carouselPara">Bitcoin is an innovative payment network</p>
+          <div class="carouselPrice">
+              <h3>$34,000</h3>
+              <span class="rect"></span>
+              <h3 class="carouselDiscount">15%</h3>
+          </div>
+          <button class="btn carouselBtn">Buy & Trade</button>
+      </article>
+  </div>
+
+  <div class="eachCarousel">
+      <img src="{% static 'img/ethereum-icon.png' %}" alt="">
+      <article class="carouselDesc">
+          <h1 class="carouselTitle">Ethereum</h1>
+          <p class="carouselPara">Ethereum is open-source blockchain currency</p>
+          <div class="carouselPrice">
+              <h3>$25,600</h3>
+              <span class="rect"></span>
+              <h3 class="carouselDiscount">9%</h3>
+          </div>
+          <button class="btn carouselBtn">Buy & Trade</button>
+      </article>
+  </div>
+
+  <div class="eachCarousel">
+      <img src="{% static 'img/tether-icon.png' %}" alt="">
+      <article class="carouselDesc">
+          <h1 class="carouselTitle">Tether</h1>
+          <p class="carouselPara">Tether is a stable coin cryptocurrency</p>
+          <div class="carouselPrice">
+              <h3>$7,000</h3>
+              <span class="rect"></span>
+              <h3 class="carouselDiscount">4%</h3>
+          </div>
+          <button class="btn carouselBtn">Buy & Trade</button>
+      </article>
+  </div>
+</div>
+</div>
+
     <div class="carouselIndicator">
         <div class="indicator activeIndicator" onclick="slideCarousel(0)"></div>
         <div class="indicator" onclick="slideCarousel(1)"></div>
@@ -440,7 +457,7 @@
     </article>
     <p> To make a solid investment, you have to know where you are investing. Find a plan which is best for you. </p> -->
     <div class="pricing-card starter">
-      <h3>Starter</h3>
+      <h3>Plantinum Max</h3>
       <h4>$29<span>/MONTH</span></h4>
       <ul>
         <li>✔️ 10,000 Visitors*</li>
