--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1937,3 +1937,35 @@ align-items: flex-start;
       padding: 20px;
     }
   }
+
+  .preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--darkblue); /* Dark overlay */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Ensure it's above other content */
+  }
+  
+  .loader {
+    border: 5px solid #3498db; /* Blue border */
+    border-top: 5px solid transparent; /* Transparent top for spinning effect */
+    border-radius: 50%; /* Makes it a circle */
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite; /* Infinite spinning */
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
