--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,42 @@
   <script src="//code.jivosite.com/widget/3OQtNZONHK" async></script>
 
 </head>
-<body>
+<body onload="">
+    <!-- Preloader container -->
+     {% comment %} <div class="preloader">
+        <div class="loader"></div>
+    </div>  {% endcomment %}
 
+    
+       <div class="preloader">
+        <div id="loader"></div>
+       </div>
+    
+    <style>
+        /* Center the loader */
+        #loader {
+            border: 5px solid #3498db; /* Blue border */
+            border-top: 5px solid transparent; /* Transparent top for spinning effect */
+            border-radius: 50%; /* Makes it a circle */
+            width: 50px;
+            height: 50px;
+            animation: spin 2s linear infinite; /* Infinite spinning */
+          }
+          
+          @keyframes spin {
+            0% {
+              transform: rotate(0deg);
+            }
+            100% {
+              transform: rotate(360deg);
+            }
+        }
+        
+        {% comment %} #myDiv {
+          display: none;
+          text-align: center;
+        } {% endcomment %}
+        </style>
     <!-- Header -->
     <header>
         <div id="logo">
@@ -163,7 +197,7 @@ cb=googleTranslateElementInit">
 
         <div class="footerlinksContainer">
             <div class="footerAboutus">
-                <img src="./img/logo-white.png" alt="">
+                <img src="{% static 'img/logo-white.png' %}" alt="">
                 <p class="darkPara">With no commissions and a simple user interface, 
                  Prouple is the most reliable way to trade for 
                  Cryptocurrency.
@@ -222,5 +256,9 @@ cb=googleTranslateElementInit">
         });
     </script>
     {% endblock %}
+
+
+
+
 </body>
 </html>
