--- a/templates/index.html
+++ b/templates/index.html
@@ -457,44 +457,51 @@
     </article>
     <p> To make a solid investment, you have to know where you are investing. Find a plan which is best for you. </p> -->
     <div class="pricing-card starter">
-      <h3>Plantinum Max</h3>
-      <h4>$29<span>/MONTH</span></h4>
+      <h3>BASIC PLAN</h3>
+      <h4>20%<span>/Return</span></h4>
       <ul>
-        <li>✔️ 10,000 Visitors*</li>
-        <li>✔️ Create Unlimited Widgets</li>
+        <li>✔️ After 24 hours</li>
+        <li>✔️ Total 20% + capital</li>
         <li>✔️ All Widget Types</li>
-        <li>✔️ 3rd Party Integrations</li>
-        <li>✔️ Advanced Targeting</li>
-        <li>✔️ Widget A/B Testing</li>
+        <li>✔️ $50 to $499</li>
+        {% comment %} <li>✔️ Advanced Targeting</li>
+        <li>✔️ Widget A/B Testing</li> {% endcomment %}
       </ul>
       <button>GET STARTED</button>
     </div>
     <div class="pricing-card pro most-popular">
       <div class="tag">MOST POPULAR</div>
-      <h3>Pro</h3>
-      <h4>$46<span>/MONTH</span></h4>
+      <h3>SILVER PLAN</h3>
+      <h4>50%<span>/Returns</span></h4>
       <ul>
-        <li>✔️ 10,000 Visitors*</li>
-        <li>✔️ All in Starter</li>
-        <li>✔️ Website Personalization</li>
-        <li>✔️ A/B Testing and Experimentation</li>
-        <li>✔️ Manage Multiple Websites</li>
-        <li>✔️ Priority Support</li>
+        <li>✔️ After 48 hours</li>
+        <li>✔️ Total 50% + capital</li>
+        <li>✔️ $500 to $999</li>
+        <li>✔️ Custom Support</li>
       </ul>
       <button>GET STARTED</button>
     </div>
     <div class="pricing-card enterprise">
-      <h3>Enterprise</h3>
-      <h4>Custom</h4>
+      <h3>GOLD PLAN</h3>
+      <h4>80%<span>/Returns</span></h4>
       <ul>
-        <li>✔️ 10,000 Visitors*</li>
-        <li>✔️ All in Starter and Pro</li>
-        <li>✔️ Custom Contract</li>
-        <li>✔️ Clearbit and Albacross</li>
-        <li>✔️ Custom Integrations</li>
-        <li>✔️ Dedicated Manager</li>
+        <li>✔️ After 72 hours</li>
+        <li>✔️ Total 80% + capital</li>
+        <li>✔️ $1,000 to $4,999</li>
+        <li>✔️ Custom Support</li>
       </ul>
-      <button>CONTACT US</button>
+      <button>GET STARTED</button>
+    </div>
+    <div class="pricing-card enterprise">
+      <h3>VIP PLAN</h3>
+      <h4>100%<span>/Returns</span></h4>
+      <ul>
+        <li>✔️ After 96 hours</li>
+        <li>✔️ Total 100% + capital</li>
+        <li>✔️ $20,000 to $49,999</li>
+        <li>✔️ Custom Support</li>
+      </ul>
+      <button>GET STARTED</button>
     </div>
   </section>
 
