--- a/templates/base.html
+++ b/templates/base.html
@@ -192,7 +192,7 @@ cb=googleTranslateElementInit">
                     Once you have created your account, you can purchase coins from website
                 </p>
             </div>
-            <button class="btn primaryBtn" data-aos="fade-down">JOIN NOW</button>
+            <a href="{% url "signin" %}"><button class="btn primaryBtn" data-aos="fade-down">JOIN NOW</button></a>
         </div>
 
         <div class="footerlinksContainer">
