--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             Invest in an Industry Leader, Professional, and Reliable Company. We provide you with the most necessary features that will make your experience better. Not only we guarantee the fastest and the most exciting returns on your investments, but we also guarantee the security of your investment.
         </p>
         <div class="btnContainer">
-            <button data-aos="fade-left" class="btn btn1">Contact Now</button>
+            <a href="{% url 'contact' %}"><button data-aos="fade-left" class="btn btn1">Contact Now</button></a>
             <button data-aos="fade-right" class="btn btn2">play video <i class="fa-solid fa-play"></i></button>
         </div>
     </div>
@@ -60,7 +60,7 @@
               <span class="rect"></span>
               <h3 class="carouselDiscount">15%</h3>
           </div>
-          <button class="btn carouselBtn">Buy & Trade</button>
+          <a href="{% url 'signin' %}"><button class="btn carouselBtn">Buy & Trade</button></a>
       </article>
   </div>
 
@@ -74,7 +74,7 @@
               <span class="rect"></span>
               <h3 class="carouselDiscount">9%</h3>
           </div>
-          <button class="btn carouselBtn">Buy & Trade</button>
+          <a href="{% url 'signin' %}"><button class="btn carouselBtn">Buy & Trade</button></a>
       </article>
   </div>
 
@@ -88,7 +88,7 @@
               <span class="rect"></span>
               <h3 class="carouselDiscount">4%</h3>
           </div>
-          <button class="btn carouselBtn">Buy & Trade</button>
+          <a href="{% url 'signin' %}"><button class="btn carouselBtn">Buy & Trade</button></a>
       </article>
   </div>
 
@@ -102,7 +102,7 @@
               <span class="rect"></span>
               <h3 class="carouselDiscount">15%</h3>
           </div>
-          <button class="btn carouselBtn">Buy & Trade</button>
+          <a href="{% url 'signin' %}"><button class="btn carouselBtn">Buy & Trade</button></a>
       </article>
   </div>
 
@@ -116,7 +116,7 @@
               <span class="rect"></span>
               <h3 class="carouselDiscount">9%</h3>
           </div>
-          <button class="btn carouselBtn">Buy & Trade</button>
+          <a href="{% url 'signin' %}"><button class="btn carouselBtn">Buy & Trade</button></a>
       </article>
   </div>
 
@@ -130,7 +130,7 @@
               <span class="rect"></span>
               <h3 class="carouselDiscount">4%</h3>
           </div>
-          <button class="btn carouselBtn">Buy & Trade</button>
+          <a href="{% url 'signin' %}"><button class="btn carouselBtn">Buy & Trade</button></a>
       </article>
   </div>
 </div>
@@ -281,7 +281,7 @@
             But with prouple, you can mine bitcoin from your own phone! 
             You no longer have to worry about costly transactions.
         </p>
-        <button data-aos="fade-up" class="btn">Explore Now</button>
+        <a href="{% url "signin" %}"><button data-aos="fade-up" class="btn">Explore Now</button>
     </div>
 
     <div class="sectionPic dashboardPic">
@@ -467,7 +467,7 @@
         {% comment %} <li>✔️ Advanced Targeting</li>
         <li>✔️ Widget A/B Testing</li> {% endcomment %}
       </ul>
-      <button>GET STARTED</button>
+      <a href="{% url "signin" %}"><button>GET STARTED</button></a>
     </div>
     <div class="pricing-card pro most-popular">
       <div class="tag">MOST POPULAR</div>
@@ -479,7 +479,7 @@
         <li>✔️ $500 to $999</li>
         <li>✔️ Custom Support</li>
       </ul>
-      <button>GET STARTED</button>
+      <a href="{% url "signin" %}"><button>GET STARTED</button></a>
     </div>
     <div class="pricing-card enterprise">
       <h3>GOLD PLAN</h3>
@@ -490,7 +490,7 @@
         <li>✔️ $1,000 to $4,999</li>
         <li>✔️ Custom Support</li>
       </ul>
-      <button>GET STARTED</button>
+      <a href="{% url "signin" %}"><button>GET STARTED</button></a>
     </div>
     <div class="pricing-card enterprise">
       <h3>VIP PLAN</h3>
@@ -501,7 +501,7 @@
         <li>✔️ $20,000 to $49,999</li>
         <li>✔️ Custom Support</li>
       </ul>
-      <button>GET STARTED</button>
+      <a href="{% url "signin" %}"><button>GET STARTED</button></a>
     </div>
   </section>
 
@@ -584,7 +584,7 @@
             </div>
 
             <div class="btn">
-              <button>Read More...</button>
+              <a href="{% url "signin" %}"><button>Read More...</button></a>
             </div>
           </div>
 
@@ -612,7 +612,7 @@
             </div>
 
             <div class="btn">
-              <button>Read More...</button>
+              <a href="{% url "signin" %}"><button>Read More...</button></a>
             </div>
           </div>
 
@@ -639,7 +639,7 @@
             </div>
 
             <div class="btn">
-              <button>Read More...</button>
+              <a href="{% url "signin" %}"><button>Read More...</button></a>
             </div>
           </div>
 
@@ -667,7 +667,7 @@
             </div>
 
             <div class="btn">
-              <button>Read More...</button>
+              <a href="{% url "signin" %}"><button>Read More...</button></a>
             </div>
           </div>
 
@@ -695,7 +695,7 @@
             </div>
 
             <div class="btn">
-              <button>Read More...</button>
+              <a href="{% url "signin" %}"><button>Read More...</button></a>
             </div>
           </div>
 
@@ -727,7 +727,7 @@
               </div>
   
               <div class="btn">
-                <button>Read More...</button>
+                <a href="{% url "signin" %}"><button>Read More...</button></a>
               </div>
             </div>
   
@@ -757,7 +757,7 @@
               </div>
   
               <div class="btn">
-                <button>Read More...</button>
+                <a href="{% url "signin" %}"><button>Read More...</button></a>
               </div>
             </div>
   
@@ -787,7 +787,7 @@
               </div>
   
               <div class="btn">
-                <button>Read More...</button>
+                <a href="{% url "signin" %}"><button>Read More...</button></a>
               </div>
             </div>
   
@@ -816,7 +816,7 @@
               </div>
   
               <div class="btn">
-                <button>Read More...</button>
+                <a href="{% url "signin" %}"><button>Read More...</button></a>
               </div>
             </div>
   
@@ -844,7 +844,7 @@
               </div>
   
               <div class="btn">
-                <button>Read More...</button>
+                <a href="{% url "signin" %}"><button>Read More...</button></a>
               </div>
             </div>
   
@@ -863,8 +863,9 @@
         <p class="sectionPara" data-aos="fade-down">
             This is where crypto news websites come in handy and stay up-to-date this sphere.
         </p>
-        <form action="#" class="newsletter">
-            <input type="email" name="" id="newsletter" placeholder="enter your email">
+        <form action="/subscribe/" method="post" class="newsletter">
+          {% csrf_token %}
+            <input type="email" name="newsletter" id="newsletter" placeholder="enter your email">
             <button type="submit" class="btn primaryBtn">Subscribe</button>
         </form>
     </div>
