--- a/templates/base.html
+++ b/templates/base.html
@@ -43,10 +43,10 @@
         <div class="loader"></div>
     </div>  {% endcomment %}
 
-    
+    {% comment%}
        <div class="preloader">
         <div id="loader"></div>
-       </div>
+       </div> {% comment%}
     
     <style>
         /* Center the loader */
